--- a/index.html
+++ b/index.html
@@ -15,8 +15,51 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="content">
+      <h1 class="content__title">Reliable, efficient delivery</h1>
+      <h2 class="content__subtitle">Powered by Technology</h2>
+      <p class="content__description">
+        Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful
+      </p>
+    </div>
+    <div class="cards">
+      <div class="card card--supervisor">
+        <h1 class="card__title">Supervisor</h1>
+        <p class="card__description">
+          Monitors activity to identify project roadblocks
+        </p>
+        <img src="images/icon-supervisor.svg" alt="supervisor icon" class="card__icon">
+      </div>
+
+      <div class="card card--team-builder">
+        <h1 class="card__title">Supervisor</h1>
+        <p class="card__description">
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <img src="images/icon-team-builder.svg" alt="team builder icon" class="card__icon">
+      </div>
+
+      <div class="card card--karma">
+        <h1 class="card__title">Supervisor</h1>
+        <p class="card__description">
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <img src="images/icon-karma.svg" alt="karma icon" class="card__icon">
+      </div>
+
+      <div class="card card--calculator">
+        <h1 class="card__title">Calculator</h1>
+        <p class="card__description">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img src="images/icon-calculator.svg" alt="Calculator icon" class="card__icon">
+      </div>
+    </div>
+  </main>
   
-  Reliable, efficient delivery
+  <!-- Reliable, efficient delivery
   Powered by Technology
 
   Our Artificial Intelligence powered tools use millions of project data points 
@@ -32,7 +75,7 @@
   Regularly evaluates our talent to ensure quality
 
   Calculator
-  Uses data from past projects to provide better delivery estimates
+  Uses data from past projects to provide better delivery estimates -->
 
   
   <footer>
