--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="card card--team-builder">
-        <h1 class="card__title">Supervisor</h1>
+        <h1 class="card__title">Team Builder</h1>
         <p class="card__description">
           Scans our talent network to create the optimal team for your project
         </p>
@@ -41,7 +41,7 @@
       </div>
 
       <div class="card card--karma">
-        <h1 class="card__title">Supervisor</h1>
+        <h1 class="card__title">Karma</h1>
         <p class="card__description">
           Regularly evaluates our talent to ensure quality
         </p>
